--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -68,7 +68,7 @@
       }
     }
   },
-  "envinronementName": {
+  "environmentName": {
     "localhost": "local",
     "d-001": "dev-001",
     "d-002": "dev-002",
@@ -189,7 +189,8 @@
     "search": "Search",
     "selectedValues": "{{count}} selected",
     "calculationType": "Calculation type",
-    "all": "All"
+    "all": "All",
+    "downloadNameParams": "'{{ env }}' environment - {{ datetime }}"
   },
   "clipboard": {
     "success": "Copied",
@@ -524,6 +525,7 @@
         "year": "Year"
       },
       "qualityNotAvailableInThisResolution": "Quality not available in this resolution",
+      "tooltip": "≈ Indicates if there are estimated values \n● Indicates if measurement data has changed",
       "missingValues": "Missing values",
       "filters": {
         "showHistoricValues": "History",
@@ -1278,6 +1280,7 @@
     "marketRolesOverview": {
       "marketRoles": "Market Roles",
       "download": "Download",
+      "fileName": "DataHub market roles - {{ shared.downloadNameParams }}",
       "columns": {
         "name": "Name",
         "description": "Description"
@@ -2076,7 +2079,7 @@
         "marketParticipantName": "Market participant name",
         "latestLogin": "Latest login",
         "organisationName": "Organisation name",
-        "fileName": "DataHub users - '{{ env }}' environment - {{ datetime }}"
+        "fileName": "DataHub users - {{ shared.downloadNameParams }}"
       },
       "drawer": {
         "edit": "Edit user",
@@ -2242,6 +2245,9 @@
             "marketRole": "Market role",
             "search": "Search user roles"
           },
+          "download": {
+            "fileName": "DataHub roles - {{ shared.downloadNameParams }}"
+          },
           "table": {
             "columns": {
               "name": "Name",
@@ -2348,7 +2354,8 @@
       "permissionsTab": {
         "headline": "Permissions",
         "permissionName": "Name",
-        "permissionDescription": "Description"
+        "permissionDescription": "Description",
+        "fileName": "DataHub permissions - {{ shared.downloadNameParams }}"
       },
       "permissionDetail": {
         "edit": "Edit permission",
