--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1401,6 +1401,7 @@
         "SENDER": "Sending messages to eSett",
         "RECEIVER": "Receiving messages from eSett"
       },
+      "fileName": "DataHub eSett outgoing messages - {{ shared.downloadNameParams }}",
       "shared": {
         "calculationType": {
           "BALANCE_FIXING": "{{ shared.calculationTypes.BALANCE_FIXING }}",
