--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -437,7 +437,8 @@
       },
       "actions": {
         "actionsButton": "Handlinger",
-        "upload": "Upload måledata"
+        "upload": "Upload måledata",
+        "moveIn": "Tilflyt kunde"
       },
       "details": {
         "address": "{{ meteringPoint.overview.shared.address }}",
@@ -600,6 +601,18 @@
           "error": "{{shared.error.title}}"
         }
       }
+    },
+    "moveIn": {
+      "title": "Tilflyt kunde (meldt af el-leverandør)",
+      "steps": {
+        "customerDetails": {
+          "label": "Kundedetaljer"
+        },
+        "contactDetails": {
+          "label": "Kontakdetaljer"
+        }
+      },
+      "save": "Tilflyt kunde"
     }
   },
   "messageArchive": {
