Use generate csv

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1004,6 +1004,7 @@
         "status": "Status",
         "mail": "E-mail"
       },
+      "fileName": "DataHub aktør - {{ shared.downloadNameParams }}",
       "create": "Ny aktør",
       "actors": "Aktører",
       "columns": {
