--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -782,6 +782,7 @@
       }
     },
     "accessToMeasurements": {
+      "fileName": "DataHub additional recipients of measurement data - {{ shared.downloadNameParams }}",
       "emptyTitle": "No access to measurements for external metering points",
       "emptyMessage": "Add metering points in order to receive or request measurements",
       "emptyButton": "Manage access",
