Improve search field

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -196,6 +196,9 @@
     "success": "Kopieret",
     "error": "Kopiering mislykkedes"
   },
+  "code": {
+    "searchPlaceholder": "Søg i teksten"
+  },
   "datepicker": {
     "clear": "Ryd",
     "select": "Vælg"
