--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -196,6 +196,9 @@
     "success": "Copied",
     "error": "Failed to copy"
   },
+  "code": {
+    "searchPlaceholder": "Search in text"
+  },
   "datepicker": {
     "clear": "Clear",
     "select": "OK"
