--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1352,6 +1352,8 @@
       "topBarTitle": "Netområder",
       "noGridAreas": "Ingen netområder fundet",
       "error": "En fejl opstod",
+      "searchLabel": "Søg",
+      "fileName": "DataHub netområder - {{ shared.downloadNameParams }}",
       "columns": {
         "code": "Netområde",
         "actor": "Netvirksomhed",
