--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1351,6 +1351,8 @@
       "topBarTitle": "Grid Areas",
       "noGridAreas": "No grid areas found",
       "error": "An error occurred",
+      "searchLabel": "Search",
+      "fileName": "DataHub grid areas - {{ shared.downloadNameParams }}",
       "columns": {
         "code": "Grid area",
         "actor": "Grid access provider",
