chore: WIP customer details form

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -608,7 +608,7 @@
         "customerDetails": {
           "label": "Kundedetaljer",
           "transactionId": {
-            "label": "label",
+            "label": "Transaktions ID",
             "placeholder": "placeholder"
           }
         },
