--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -578,6 +578,7 @@
         "M_WH": "MWh",
         "TONNE": "Tonne",
         "K_V_ARH": "kVArh",
+        "KV_ARH": "kVArh",
         "MV_AR": "MVAr"
       },
       "sum": "Sum",
