--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -711,7 +711,8 @@
       "REQUEST_WHOLESALE_SETTLEMENT": "Anmod om engrosydelser (RSM-017)",
       "B2C_REQUEST_WHOLESALE_SETTLEMENT": "B2C: Anmod om engrosydelser (RSM-017)",
       "NOTIFY_WHOLESALE_SERVICES": "Notifikation om beregnede engrosydelser (RSM-019)",
-      "REMINDER_OF_MISSING_MEASUREMENTS": "Hullerlog (RSM-018)"
+      "REMINDER_OF_MISSING_MEASUREMENTS": "Hullerlog (RSM-018)",
+      "UPDATE_CHARGE_LINKS": "Opdatering af pristilknytninger (RSM-030)"
     },
     "businessReason": {
       "D03": "Aggregering (D03)",
