--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -711,7 +711,8 @@
       "REQUEST_WHOLESALE_SETTLEMENT": "Request for wholesale services (RSM-017)",
       "B2C_REQUEST_WHOLESALE_SETTLEMENT": "B2C: Request for wholesale services (RSM-017)",
       "NOTIFY_WHOLESALE_SERVICES": "Notification of calculated wholesale services (RSM-019)",
-      "REMINDER_OF_MISSING_MEASUREMENTS": "Reminders (RSM-018)"
+      "REMINDER_OF_MISSING_MEASUREMENTS": "Reminders (RSM-018)",
+      "UPDATE_CHARGE_LINKS": "Update charge links (RSM-030)"
     },
     "businessReason": {
       "D03": "Aggregation (D03)",
