Align file naming

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1540,6 +1540,7 @@
           "BOTH": "Alle"
         }
       },
+      "fileName": "DataHub eSett MGA ubalancer - {{ shared.downloadNameParams }}",
       "searchLabel": "{{ eSett.meteringGridAreaImbalance.filters.documentId }}",
       "filters": {
         "gridArea": "{{ eSett.shared.gridArea }}",
