--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1541,6 +1541,7 @@
         }
       },
       "searchLabel": "{{ eSett.meteringGridAreaImbalance.filters.documentId }}",
+      "fileName": "DataHub eSett MGA imbalance - {{ shared.downloadNameParams }}",
       "filters": {
         "gridArea": "{{ eSett.shared.gridArea }}",
         "createdPeriod": "Created",
