fix(dh): adjustments to move-in

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -625,9 +625,8 @@
       "steps": {
         "customerDetails": {
           "label": "Kundedetaljer",
-          "transactionId": "Transaktions ID",
           "cutOffDate": "Skæringsdato",
-          "moveInType": "Flytningstype",
+          "moveInType": "Tilflytningstype",
           "customerInformation": "Kundeoplysninger",
           "private": "Privat",
           "business": "Erhverv",
