--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1650,7 +1650,7 @@
       "updatedLabel": "Uploaded",
       "pricesNote": "Prices are shown in DKK for kWh"
     },
-    "fileName": "DataHub imbalance prices - {{ shared.downloadNameParams }}"
+    "fileName": "DataHub imbalance prices"
   },
   "reports": {
     "topBarTitle": "Reports",
@@ -2314,7 +2314,7 @@
             "search": "Search user roles"
           },
           "download": {
-            "fileName": "DataHub roles - {{ shared.downloadNameParams }}"
+            "fileName": "DataHub user roles - {{ shared.downloadNameParams }}"
           },
           "table": {
             "columns": {
