chore: alters translation strings to use correct format, removes unnecessary declarations, and implements country options in contact details form - suggestions from PR

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -642,27 +642,27 @@
           "label": "Kontakdetaljer",
           "legalContactSection": "Juridisk kontakt",
           "technicalContactSection": "Teknisk kontakt",
-          "contactSameAsCustomer": "KONTAKT ER SAMME SOM KUNDENAVN",
-          "contactName": "KONTAKTNAVN",
-          "attention": "ATT.",
-          "phoneNumber": "TELEFONNR.",
-          "mobile": "MOBIL",
-          "email": "E-MAIL ADRESSE",
+          "contactSameAsCustomer": "Samme som kundenavn",
+          "contactName": "Kontaktnavn",
+          "attention": "Att.",
+          "phoneNumber": "Telefonnr.",
+          "mobile": "Mobil",
+          "email": "E-mail adresse",
           "addressDetails": "Adresseoplysninger",
-          "addressSameAsMeteringPoint": "ADRESSE SAMME SOM MÅLEPUNKTSADRESSE",
-          "street": "VEJNAVN",
-          "houseNumber": "HUSNUMMER",
-          "floor": "ETAGE",
-          "door": "DØRBETEGNELSE",
-          "postalCode": "POSTNUMMER",
-          "city": "BYNAVN",
-          "country": "LAND",
-          "roadCode": "VEJKODE",
-          "postalDistrict": "POSTDISTRIKT",
-          "postBox": "POSTBOKS",
-          "municipalityCode": "KOMMUNEKODE",
-          "darReference": "DAR REFERENCE",
-          "nameAddressProtection": "NAVNE- OG ADRESSEBESKYTTELSE"
+          "addressSameAsMeteringPoint": "Samme som målepunktsadresse",
+          "street": "Vejnavn",
+          "houseNumber": "Husnummer",
+          "floor": "Etage",
+          "door": "Dørbetegnelse",
+          "postalCode": "Postnummer",
+          "city": "Bynavn",
+          "country": "Land",
+          "roadCode": "Vejkode",
+          "postalDistrict": "Postdistrikt",
+          "postBox": "Postboks",
+          "municipalityCode": "Kommunekode",
+          "darReference": "Dar reference",
+          "nameAddressProtection": "Navne- og adressebeskyttelse"
         },
         "moveInType": {
           "E65": "Almindelig (E65)",
