--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -642,27 +642,27 @@
           "label": "Contact details",
           "legalContactSection": "Legal contact",
           "technicalContactSection": "Technical contact",
-          "contactSameAsCustomer": "CONTACT IS SAME AS CUSTOMER NAME",
-          "contactName": "CONTACT NAME",
-          "attention": "ATTN.",
-          "phoneNumber": "PHONE NUMBER",
-          "mobile": "MOBILE",
-          "email": "EMAIL ADDRESS",
+          "contactSameAsCustomer": "Same as customer name",
+          "contactName": "Contact name",
+          "attention": "Attn.",
+          "phoneNumber": "Phone number",
+          "mobile": "Mobile",
+          "email": "Email address",
           "addressDetails": "Address details",
-          "addressSameAsMeteringPoint": "ADDRESS SAME AS METERING POINT ADDRESS",
-          "street": "STREET",
-          "houseNumber": "HOUSE NUMBER",
-          "floor": "FLOOR",
-          "door": "DOOR",
-          "postalCode": "POSTAL CODE",
-          "city": "CITY",
-          "country": "COUNTRY",
-          "roadCode": "ROAD CODE",
-          "postalDistrict": "POSTAL DISTRICT",
-          "postBox": "POST BOX",
-          "municipalityCode": "MUNICIPALITY CODE",
-          "darReference": "DAR REFERENCE",
-          "nameAddressProtection": "NAME AND ADDRESS PROTECTION"
+          "addressSameAsMeteringPoint": "Same as metering point address",
+          "street": "Street",
+          "houseNumber": "House number",
+          "floor": "Floor",
+          "door": "Door",
+          "postalCode": "Postal code",
+          "city": "City",
+          "country": "Country",
+          "roadCode": "Road code",
+          "postalDistrict": "Postal district",
+          "postBox": "Post box",
+          "municipalityCode": "Municipality code",
+          "darReference": "Dar reference",
+          "nameAddressProtection": "Name and address protection"
         },
         "moveInType": {
           "E65": "Ordinary (E65)",
