--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -639,7 +639,30 @@
           "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}"
         },
         "contactDetails": {
-          "label": "Contact details"
+          "label": "Contact details",
+          "legalContactSection": "Legal contact",
+          "technicalContactSection": "Technical contact",
+          "contactSameAsCustomer": "Same as customer name",
+          "contactName": "Contact name",
+          "attention": "Attn.",
+          "phoneNumber": "Phone number",
+          "mobile": "Mobile",
+          "email": "Email address",
+          "addressDetails": "Address details",
+          "addressSameAsMeteringPoint": "Same as metering point address",
+          "street": "Street",
+          "houseNumber": "House number",
+          "floor": "Floor",
+          "door": "Door",
+          "postalCode": "Postal code",
+          "city": "City",
+          "country": "Country",
+          "roadCode": "Road code",
+          "postalDistrict": "Postal district",
+          "postBox": "Post box",
+          "municipalityCode": "Municipality code",
+          "darReference": "Dar reference",
+          "nameAddressProtection": "Name and address protection"
         },
         "moveInType": {
           "E65": "Ordinary (E65)",
